--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #121212;
+            background: url('https://iili.io/3oI3M6g.jpg') no-repeat center center/cover;
             color: white;
             font-family: Arial, sans-serif;
             text-align: center;
         }
         .container {
             padding: 20px;
+            background: rgba(0, 0, 0, 0.6);
+            border-radius: 10px;
         }
         h1 {
             font-size: 2.5rem;
@@ -36,7 +38,7 @@
     <div class="container">
         <h1>We're Launching Soon!</h1>
         <p>Stay tuned for updates.</p>
-        <p>Contact us on Telegram: <a href="https://t.me/X0557" target="_blank">X0557 ( Shreeram )</a></p>
+        <p>Contact us on Telegram: <a href="https://t.me/X0557" target="_blank">@X0557</a></p>
     </div>
 </body>
 </html>
